# crawl_enterprise_info

./: .gitignore  MANIFEST.in  Pipfile  README.md  demo.py  scrapy.cfg  setup.cfg  tox.ini  设计.md
crawl_business_info/: items.py  middlewares.py  pipelines.py  runer.py  settings.py
crawl_business_info/config/: __init__.py  settings.yml
crawl_business_info/spiders/: spider.py
crawl_business_info/storage/: mongodb_storage.py  redis_storage.py
docs/: 设计.md
src/: main.py  runer.py
src/crawl_enterprise_info/: __init__.py  category_urls_redis.py  cmdline.py  crawl.py  demo.py  demoz.py  runer.py
src/crawl_enterprise_info/config/: __init__.py  settings.local.yml  settings.yml
src/crawl_enterprise_info/storage/: mongodb_storage.py  redis_storage.py
src/scrapy_crawl/: demo.py  items.py  main.py  middlewares.py  pipelines.py  runcp.py  settings.py
src/scrapy_crawl/config/: Free_Proxy_List.json  settings.yml
src/scrapy_crawl/spiders/: spider.py
src/scrapy_crawl/storage/: mongodb_storage.py  redis_storage.py
tests/: test_crawl.py  test_runer.py  tests.py
tests/data/: city_list.html
