[metadata]
name = crawl_business_info
version = 0.0.2

[options]
packages = crawl_business_info
install_requires =
    requests
    importlib; python_version == "3.10"

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.packages.find]
where = crawl_business_info
exclude =
    tests*
    docs
